
===================
2015-02-03  v1.13.0
===================

Improvements:

 * better docs for everything
 * some new elm examples/tests
 * new efl.utils.setup helper module to simplify user setup.py
 * new uninstall setup.py command


Changes:

 * raised cython requirements to 0.21
 * ecore.x module renamed to ecore_x
 * removed evas.SmartObject class, it was broken


Additions:

 * efl.utils.setup module
 * elm.Configuration.slider_indicator_visible_mode
 * elm.Gengrid.callback_clicked_right_add
 * elm.Genlist.callback_clicked_right_add
 * elm.List.callback_clicked_right_add
 * elm.Scrollable.step_size
 * elm.Table.align
 * elm.Theme.group_base_list_get
 * elm.Transit.tween_mode_factor_n
 * elm.ELM_TRANSIT_TWEEN_MODE_DIVISOR_INTERP
 * elm.ELM_TRANSIT_TWEEN_MODE_BOUNCE
 * elm.ELM_TRANSIT_TWEEN_MODE_SPRING
 * elm.ELM_TRANSIT_TWEEN_MODE_BEZIER_CURVE
 * elm.DialogWindow
 * elm.Window.callback_theme_changed_add
 * evas.Map.util_object_move_sync
 * evas.Object.size_hint_expand
 * evas.Object.size_hint_fill
 * evas.EXPAND_BOTH
 * evas.EXPAND_HORIZ
 * evas.EXPAND_VERT
 * evas.FILL_BOTH
 * evas.FILL_HORIZ
 * evas.FILL_VERT

 
===================
2014-11-23  v1.12.0
===================

Additions:

 * Edje.base_scale
 * Edje.part_text_input_hint_get
 * Edje.part_text_input_hint_set
 * elm.ELM_PROCESS_STATE_FOREGROUND
 * elm.ELM_PROCESS_STATE_BACKGROUND
 * elm.process_state_get
 * elm.ELM_INPUT_HINT_NONE
 * elm.ELM_INPUT_HINT_AUTO_COMPLETE
 * elm.ELM_INPUT_HINT_SENSITIVE_DATA
 * elm.ELM_INPUT_PANEL_LAYOUT_NORMAL_VARIATION_NORMAL
 * elm.ELM_INPUT_PANEL_LAYOUT_NORMAL_VARIATION_FILENAME
 * elm.ELM_INPUT_PANEL_LAYOUT_NORMAL_VARIATION_PERSON_NAME
 * elm.ELM_INPUT_PANEL_LAYOUT_NUMBERONLY_VARIATION_NORMAL
 * elm.ELM_INPUT_PANEL_LAYOUT_NUMBERONLY_VARIATION_SIGNED
 * elm.ELM_INPUT_PANEL_LAYOUT_NUMBERONLY_VARIATION_DECIMAL
 * elm.ELM_INPUT_PANEL_LAYOUT_NUMBERONLY_VARIATION_SIGNED_AND_DECIMAL
 * elm.ELM_INPUT_PANEL_LAYOUT_PASSWORD_VARIATION_NORMAL